--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,28 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Track your expenses, set budgets, and visualize your financial data with our comprehensive personal finance management tool." />
+  <meta name="keywords"
+    content="personal finance, budget tracker, expense manager, financial visualization, money management" />
+  <meta name="author" content="Gourav Mondal" />
+  <meta property="og:title" content="Personal Finance Visualizer" />
+  <meta property="og:description"
+    content="Track your expenses, set budgets, and visualize your financial data with our comprehensive personal finance management tool." />
+  <meta property="og:type" content="website" />
+  <title>Personal Finance Visualizer</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
