--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
   <meta property="og:description"
     content="Track your expenses, set budgets, and visualize your financial data with our comprehensive personal finance management tool." />
   <meta property="og:type" content="website" />
-  <title>Personal Finance Visualizer</title>
+  <title>Personal-Finance-Visualizer</title>
 </head>
 
 <body>
